# errorfx

./: CMakeLists.txt  LICENSE  README.rst
app/: CMakeLists.txt  test_fxerror.f90  test_fxerror_fypp.fpp
cmake/: exceptions.cmake
examples/: CMakeLists.txt  catch_error.f90  catch_error_class.f90  catch_error_class_fypp.fpp  catch_error_fypp.fpp  error_extension.f90  fail_uncaught.f90  fail_uncaught_class.f90  fail_uncaught_class_fypp.fpp  fail_uncaught_fypp.fpp  function_error.f90  function_error_fypp.fpp  ignore_unactivated.f90  propagate_error.f90  propagate_error_fypp.fpp  rethrow_error.f90  rethrow_error_fypp.fpp
include/: errorfx.fypp  fxerror.fypp
lib/: CMakeLists.txt  fxerror.f90
src/: CMakeLists.txt  errorfx.f90  errorhandling.f90  errorhandling.fypp  exceptions.fpp  exceptions.fypp  main.fpp  test_errorhandling.f90  test_errorhandling_fypp.fpp  test_exceptions.fpp
